--- a/css/style.css
+++ b/css/style.css
@@ -69,11 +69,12 @@ hr {
 .service-text {
   font-size: 1rem;
   line-height: 1.8;
+  margin: 0rem 1rem;
 }
 
 .service-title {
   font-weight: 600;
-  margin-bottom: 1rem;
+  margin: 2rem 1rem;
 }
 
 .stats-section {
@@ -101,7 +102,7 @@ hr {
 }
 
 .team-section {
-  padding: 2rem 0rem;
+  padding: 1rem;
 }
 
 .team-card {
@@ -111,14 +112,46 @@ hr {
 }
 
 .team-card img {
-  width: 100%;
-  height: 250px;
-  border-radius: 0.1rem;
-  object-fit: cover;
+  width: 230px; /* Increased width */
+  height: 200px; /* Increased height */
+  object-fit: cover; /* Ensure the image fits within the dimensions */
+  margin: 0 auto; /* Center the image */
+  border-radius: 10%;
+}
+
+@media (max-width: 768px) {
+  .team-card img {
+    width: 210px; /* Adjust image size for tablets */
+    height: 220px;
+  }
+  .firstPart {
+    font-size: 150%; /* Reduce font size for tablets */
+    margin: 30px; /* Adjust margin for tablets */
+  }
+}
+
+@media (max-width: 576px) {
+  .team-card img {
+    width: 230px; /* Increased width */
+    height: 220px; /* Increased height */
+    object-fit: cover; /* Ensure the image fits within the dimensions */
+    margin: 0; /* Center the image */
+    border-radius: 10%;
+  }
+  .team-card h5 {
+    font-size: 1rem; /* Adjust font size for mobile */
+  }
+  .team-card p {
+    font-size: 0.9rem; /* Adjust font size for mobile */
+  }
+  .firstPart {
+    font-size: 120%; /* Further reduce font size for mobile */
+    margin: 20px; /* Adjust margin for mobile */
+  }
 }
 
 .team-card h5 {
-  margin-top: 5rem;
+  margin-top: 1rem;
   font-weight: bold;
 }
 
@@ -221,58 +254,4 @@ hr {
   margin-top: 20px;
   padding-top: 10px;
   font-size: 13px;
-}
-
-@media (max-width: 768px) {
-  .navbar-brand img {
-    width: 150px; /* Adjust the width as needed */
-    height: auto; /* Maintain aspect ratio */
-  }
-  .firstPart {
-    margin: 20px;
-    font-size: 150%;
-  }
-  .card {
-    flex-direction: row;
-    text-align: left;
-  }
-  .card-body {
-    flex-direction: row;
-    align-items: left;
-    padding: 0.5rem;
-    font-size: 0.9rem; /* Reduce font size */
-  }
-  .service-title {
-    margin-top: 1rem; /* Add margin-top to move the title down */
-  }
-  .compliment {
-    text-align: left; /* Change text alignment to left */
-    padding: 1rem; /* Add padding for better spacing */
-  }
-  
-}
-
-@media (max-width: 576px) {
-  .firstPart {
-    margin: 10px;
-    font-size: 120%;
-  }
-  .card {
-    padding: 0.5rem;
-  }
-  .card-body {
-    padding: 0.25rem;
-    font-size: 0.8rem; /* Further reduce font size */
-  }
-  .logo {
-    margin-bottom: 5.5rem;
-  }
-  .compliment {
-    font-size: small;
-    padding: 0.5rem; /* Add padding for better spacing */
-  }
-  .service-title {
-    margin-top: 1rem; /* Add margin-top to move the title down */
-  }
-  
 }
